solve horizontal scroll problem

--- a/style.css
+++ b/style.css
@@ -32,8 +32,11 @@ body{
     margin: 0;
     padding: 0;
     min-height: 100vh;
+    min-width: 100vw;
     overflow-x: hidden;
+
 }
+
 
 
 html{
@@ -426,6 +429,12 @@ nav{
     position: absolute;
     top: 0;
     left: 0;
+}
+
+@media (max-width:380px) {
+    .footer-pt{
+        max-width: 50%;
+    }
 }
 
 .intro-pt-right{
